--- a/Платѡнъ.mw
+++ b/Платѡнъ.mw
@@ -1,8 +1,10 @@
 [[Image:Delphi Platon statue 1.jpg|thumb|Платѡнъ]]
-'''Пла́тѡнъ''' ([[Грьчьскъ ѩзыкъ|грьчьскы]]: ''Πλάτων'') великъ древл҄ьн҄ь [[Грьци|грьчьскъ]] [[Фїлософї|фїлософъ]] ѥстъ.
+'''Пла́тѡнъ''' ({{lang-el|Πλάτων}}) великъ древл҄ьн҄ь [[Грьци|грьчьскъ]] [[Фїлософї|фїлософъ]] ѥстъ.
 
+{{commonscat|Plato}}
 [[Category:Фїлософи]]
 [[Category:Грьци]]
+[[Category:Людиѥ]]
 
 [[af:Plato]]
 [[an:Platón]]
