--- a/Сѡкратъ.mw
+++ b/Сѡкратъ.mw
@@ -1,5 +1,6 @@
 [[Image:Socrates Louvre.jpg|thumb|Сѡкратъ]]
-'''Сѡкра́тъ''' ([[грьчьскъ ѩзыкъ|грьчьскы]]: ''Σωκράτης'') бѣ древльн҄ь [[Грьци|грьчьскъ]] фїлософъ, ѹчител҄ь [[Платѡнъ|Платѡна]].
+'''Сѡкра́тъ''' ({{lang-el|Σωκράτης}}) бѣ древл҄ьн҄ь [[Грьци|грьчьскъ]] фїлософъ, ѹчител҄ь [[Платѡнъ|Платѡна]].
+{{commonscat|Socrates}}
 [[Category:Людиѥ]]
 [[Category:Фїлософи]]
 [[Category:Грьци]]
