*Empty MediaWiki Message*

--- a/Томьска_область.mw
+++ b/Томьска_область.mw
@@ -1,5 +1,5 @@
 [[Видъ:TomskOblastFlag.png|thumb|right|275px|Томьскы области знамѧ]]
-'''Томьска область''' [[Рѡсї|Рѡсїѩ]] область ѥсть. Главьнъ градъ Томьскы области [[Томьскъ]] ѥсть. Людии 1 леѡдръ обитаѥтъ. Въшьла бѣаше въ съставъ Новосибирьскы области. Послѣди лѣта 1944 аѵгѹста 13 числа самостотел҄ьна область сътворѥна ѥстъ . 
+'''Томьска область''' [[Рѡсї|Рѡсїѩ]] область ѥстъ. Главьнъ градъ Томьскы области [[Томьскъ]] ѥстъ. Людии 1 леѡдръ обитаѥтъ. Въшьла бѣаше въ съставъ Новосибирьскы области. Послѣди лѣта 1944 аѵгѹста 13 числа самостотел҄ьна область сътворѥна ѥстъ.
 
 [[Category:Рѡсї]]
 [[ru:Томская область]]
