--- a/Санктъ_Пєтєрбоургъ.mw
+++ b/Санктъ_Пєтєрбоургъ.mw
@@ -10,6 +10,9 @@
 
 '''Санкт-Петербѹргъ''' ({{Lang-ru|Санкт-Петербург}}, {{Lang-cu|Свѧтъ Петра градъ}}) основанъ ѥстъ 1703 года Рѡсїискомь цѣсарѥмь [[Петръ Великыи|Петромь А]]. [[Рѡсї|Рѡсїѩ]] стольнъ градъ междѹ 1712—1918 годы бѣаше. Санкт-Петербѹргъ построѥнъ ѥсть рѣцѣ [[Нева|Невѣ]]. Санкт-Петербѹрга имѧ о лѣта 1914 до лѣта 1924 Петроградъ, а до лѣта 1991 [[Лениноградъ]] бѣаше. Главьнъ градъ [[Лениноградьска область|Лениноградьскы]] области и градъ-ирѡи ѥстъ.
 
+== Зьри такожде ==
+{{commonscat|Saint Petersburg}}
+{{Рѡсїѩ наибол҄ьше гради}}
 [[Катигорї:Гради]]
 [[Катигорї:Стольни гради]]
 [[Катигорї:Рѡсї]]
