--- a/Москъва.mw
+++ b/Москъва.mw
@@ -8,7 +8,10 @@
 | Харта = [[Видъ:Moscow In Europe.png|200 px]]
 |}}
 '''Москъва''' ({{Lang-cu| Москы}}, генїка Москъве. словесе образъ Москъва съ рѹсьскаѥго ѩзыка ѩтъ ѥстъ, {{lang-ru|Москва}}) стольнъ градъ [[Рѡсї|Рѡсїѩ]] ѥстъ, построѥна ѥстъ рѣцѣ [[Москъва (рѣка)|Москъвѣ]]. [[Москъвьска область|Москъвьскы]] области главьнъ градъ ѥсть. Людии 10.472.629 обитаѥтъ.
+== Зьри такожде ==
 {{commonscat|Moscow}}
+{{Рѡсїѩ наибол҄ьше гради}}
+
 [[Category:Гради]]
 [[Category:Рѡсї]]
 [[Category:Стольни гради]]
