*Empty MediaWiki Message*

--- a/Новосибирьскъ.mw
+++ b/Новосибирьскъ.mw
@@ -9,7 +9,10 @@
 }}
 '''Новосибирьскъ''' ({{Lang-ru|Новосибирск}}) [[Рѡсї|Рѡсїѩ]] градъ ѥсть. Новосибирьскъ наиболии градъ [[Сибирь|Сибири]] ѥсть. Главьнъ градъ [[Новосибирьска область|Новосибирьскы]] области ѥстъ.
 Построѥнъ [[Прѣзъсибирьскъ колѣинъ пѫть|Прѣзъсибирьсцѣ колѣинѣ пѫти]] ѥстъ.
+== Зьри такожде ==
 {{commonscat|Novosibirsk}}
+{{Рѡсїѩ наибол҄ьше гради}}
+
 [[Category:Гради]]
 [[Катигорї:Рѡсї]]
 [[Category:Прѣзъсибирьскъ колѣинъ пѫть]]
