*Empty MediaWiki Message*

--- a/Єкатєрїнбоургъ.mw
+++ b/Єкатєрїнбоургъ.mw
@@ -8,7 +8,9 @@
 | map = [[Видъ:Location Yekaterinburg.png|200 px]]
 }}
 '''Екатерїнбѹръ''' ({{Lang-ru|Екатеринбург}}) градъ [[Рѡсї|Рѡсїѩ]] ѥсть. Гражденъ ѥстъ [[Ѹралъ|Ѹралѣ]]. Срьдьце [[Свердловьска область|Свердловьскы области]] ѥстъ. Людии обитаѥтъ 1337 тысѫщь. Основанъ лѣта 1723 ѥсть, градъ съ лѣта 1796 ѥстъ. Града имѧ Свердловьскъ бѣаше до лѣта 1991. Построѥнъ [[Прѣзъсибирьскъ колѣинъ пѫть|Прѣзъсибирьсцѣ колѣинѣ пѫти]] ѥстъ.
-
+== Зьри такожде ==
+{{commonscat|Yekaterinburg}}
+{{Рѡсїѩ наибол҄ьше гради}}
 
 [[Category:Гради]]
 [[Катигорї:Рѡсї]]
