*Empty MediaWiki Message*

--- a/Нижьн҄ии_Новъ_Градъ.mw
+++ b/Нижьн҄ии_Новъ_Градъ.mw
@@ -8,7 +8,9 @@
 | Харта = 
 |}}
 '''Нижьн҄ии Новъ Градъ''' градъ [[Рѡсї|Рѡсїѩ]] ѥстъ. Построѥнъ ѥсть рѣцѣ [[Вльга|Вльге]]. Людии обитаѥтъ 1284 тысѧщи. Нижьн҄ии Новъ Градъ основанъ ѥсть лѣта 1221. Града имѧ Горькїи бѣаше. 
-
+== Зьри такожде ==
+{{commonscat|Nizhny Novgorod}}
+{{Рѡсїѩ наибол҄ьше гради}}
 [[Катигорї:Гради]]
 [[Катигорї:Рѡсї]]
 
