--- a/Омьскъ.mw
+++ b/Омьскъ.mw
@@ -14,7 +14,10 @@
 Image:Coat_of_Arms_of_Omsk_(1973).png|Омьска знакъ лѣта 1973
 Image:Coat_of_Arms_of_Omsk_(1785).png|Омьска знакъ лѣта 1785
 </gallery>
+== Зьри такожде ==
 {{commonscat|Omsk}}
+{{Рѡсїѩ наибол҄ьше гради}}
+
 [[Катигорї:Гради]]
 [[Катигорї:Рѡсї]]
 [[Category:Прѣзъсибирьскъ колѣинъ пѫть]]
