--- a/Каꙁанъ.mw
+++ b/Каꙁанъ.mw
@@ -8,7 +8,9 @@
 | map = [[Видъ:Location Tatarstan Kazan.svg|200 px]]
 |}}
 '''Казанъ''' ({{Lang-ru|Казань}}, [[Татарьскъ ѩзыкъ|татарьскы]] ''Казан'') градъ [[Рѡсї|Рѡсїѩ]] ѥстъ, [[Татарстанъ|Татарстана]] стольнъ градъ ѥстъ. Казанъ основанъ лѣта 1005 ѥстъ. Дьньсь Казанѣ обитаѥтъ 1110 тысѧщь людии.
-
+== Зьри такожде ==
+{{commonscat|Kazan}}
+{{Рѡсїѩ наибол҄ьше гради}}
 [[Катигорї:Гради]]
 [[Катигорї:Рѡсї]]
 
