*Empty MediaWiki Message*

--- a/Чєлѣбиньскъ.mw
+++ b/Чєлѣбиньскъ.mw
@@ -12,7 +12,10 @@
 <gallery>
 Image:Coat of Arms of Chelyabinsk (1994).png|Челѣбиньска древльн҄ь знакъ
 </gallery>
+== Зьри такожде ==
 {{commonscat|Chelyabinsk}}
+{{Рѡсїѩ наибол҄ьше гради}}
+
 [[Катигорї:Гради]]
 [[Катигорї:Рѡсї]]
 [[Category:Прѣзъсибирьскъ колѣинъ пѫть]]
