--- a/Растовъ_на_Донѣ.mw
+++ b/Растовъ_на_Донѣ.mw
@@ -7,9 +7,11 @@
 | Основанъ = 1749
 | Харта = 
 |}}
-[[Видъ:Coat_of_Arms_of_Rostov-na-Donu_(1811).png|right|thumb|100px|Растова на Донѣ давьн҄ь знакъ]]
+[[Видъ:Coat_of_Arms_of_Rostov-na-Donu_(1811).png|thumb|100px|Растова на Донѣ давьн҄ь знакъ|left]]
 '''Растовъ на Донѣ''' ({{Lang-ru|Ростов-на-Дону}}) [[Рѡсї|Рѡсїѩ]] [[Растовска область|Растовьскы области]] главьнъ градъ ѥстъ, иже построѥнъ рѣцѣ [[Донхъ|Донѣ]] ѥстъ. Основанъ лѣта 1749, нареченъ градъ съ лѣта 1807 ѥстъ. Людии обитаѥтъ 1058 тысѫщь.
-
+== Зьри такожде ==
+{{commonscat|Rostov-on-Don}}
+{{Рѡсїѩ наибол҄ьше гради}}
 [[Катигорї:Гради]]
 [[Катигорї:Рѡсї]]
 
