*Empty MediaWiki Message*

--- a/Вльгоградъ.mw
+++ b/Вльгоградъ.mw
@@ -9,6 +9,9 @@
 |}}
 '''Вльгоградъ''' ({{Lang-ru|Волгоград}}) [[Рѡсї|Рѡсїѩ]] градъ ѥсть. Срьдьце Вльгоградьскы области ѥстъ. Назъваныи рѣкы [[Вльга|Вльгы]] именьмь ѥиже сѧ мѣстити. Рѡсїѩ наидльжаии градъ о сѣвера къ югѹ.
 
+== Зьри такожде ==
+{{commonscat|Volgograd}}
+{{Рѡсїѩ наибол҄ьше гради}}
 [[Category:Гради]]
 [[Category:Рѡсї]]
 
