*Empty MediaWiki Message*

--- a/Пєрмь.mw
+++ b/Пєрмь.mw
@@ -8,7 +8,9 @@
 | Харта =
 |}}
 '''Пермь''' [[Рѡсї|Рѡсїѩ]], [[Пермьскъ краи|Пермьскы]] кра главьнъ градъ ѥстъ. Основана лѣта 1723 ѥстъ, наречена градъ съ лѣта 1781 ѥстъ. Построѥна ѥстъ рѣцѣ [[Кама (рѣка)|Камѣ]], града имѧ ''Молотовъ'' бѣаше. Людии обитаѥтъ 990 тысѫщь.
-
+== Зьри такожде ==
+{{commonscat|Perm}}
+{{Рѡсїѩ наибол҄ьше гради}}
 [[Category:Гради]][[Category:Рѡсї]]
 
 [[be:Горад Пермь]]
