*Empty MediaWiki Message*

--- a/Ѳєссалонїка.mw
+++ b/Ѳєссалонїка.mw
@@ -1,16 +1,21 @@
 {{Градъ|Имѧ = Ѳессалонїка
 | знамѧ= Thessaloniki Municipal Flag.png
 | знакъ = 
-| Дрьжава = Грьци
+| Дрьжава = {{Грькъ знамѧ}}Грьци
 | Глава = 
-| Людии = 
+| Людии = 1,057,825
 | Основанъ = 
 | Харта = [[Видъ:Thessaloniki.png|200 px]]
 |}}
-[[Image:Salonica White Tower.jpg|thumb|left|250px|Бѣла Вѣжа Ѳессалонїцѣ, града сѷмволъ]]
-'''Ѳессалонка''', (древльнѥсловѣньскы ''Солѹнь'' или ''Селѹнь''. [[Грьчьскъ ѩзыкъ|грьчьскы]]: Θεσσαλονίκη), [[Грьци|Грьцѣхъ]] ([[Македонї]]) градъ ѥстъ, иде црькы христианьска была бѣ, ѥиже апостолъ [[Паѵлъ апостолъ|Паѵлъ]] посъланиѥ писа. И Ѳессалонїкы свѧта братри, [[Кѷрїллъ]] и [[Меѳодiи]] ѥсте, же [[Словѣньска азъбѹкы|Азъбѹкъвь]] словѣномъ измыслисте и хрїстїаньскы кънигы на [[Словѣньскъ ѩзыкъ|словѣньскыи ѩзыкъ]] прѣложисте.
 
-[[Катигорї:All orphaned pages]]
+'''Ѳессалонка''', (древльнѥсловѣньскы ''Солѹнь'' или ''Селѹнь''. {{lang-el|Θεσσαλονίκη}}), [[Грьци|Грьцѣхъ]] ([[Македонї]]) градъ ѥстъ. Людии обитаѥтъ 1,057,825. 
+
+== Їсторї ==
+[[Image:Salonica White Tower.jpg|thumb|left|250px|Бѣла Вѣжа Ѳессалонїцѣ, града сѷмволъ]]
+Ѳессалонїка градъ ѥстъ, иде црькы христианьска была бѣ, ѥиже апостолъ [[Паѵлъ апостолъ|Паѵлъ]] посъланиѥ писа. И Ѳессалонїкы свѧта братри, [[Кѷрїллъ]] и [[Меѳодiи]] ѥсте, же [[Словѣньска азъбѹкы|Азъбѹкъвь]] словѣномъ измыслисте и хрїстїаньскы кънигы на [[Словѣньскъ ѩзыкъ|словѣньскыи ѩзыкъ]] прѣложисте.
+
+== Зьри такожде ==
+{{Commonscat|Thessaloniki}}
 [[Катигорї:Гради]]
 [[Катигорї:Грьци]]
 
