--- a/Богъ.mw
+++ b/Богъ.mw
@@ -5,9 +5,8 @@
 [[Июдеи]], [[Хрїстїаньство|хрїстїни]] и нѣции дрѹзии вѣрѹѭтъ, чьто  ѥстъ тъкъмо единъ Господь Богъ Вьседрьжитель, иже вьсь миръ сътвори.
 
 [[Безбожьство|Безбожьны]] людиѥ мьнѧтъ, чьто не сѫтъ богъ.
-
+{{commons|God}}
 [[Category:Вѣра]]
-[[Category:All orphaned pages]]
 [[Category:Боги|*]]
 
 [[af:God]]
