*Empty MediaWiki Message*

--- a/Богъ.mw
+++ b/Богъ.mw
@@ -5,7 +5,7 @@
 [[Июдеи]], [[Хрїстїаньство|хрїстїни]] и нѣции дрѹзии вѣрѹѭтъ, чьто  ѥстъ тъкъмо единъ Господь Богъ Вьседрьжитель, иже вьсь миръ сътвори.
 
 [[Безбожьство|Безбожьны]] людиѥ мьнѧтъ, чьто не сѫтъ богъ.
-{{commons|God}}
+{{commonscat|God}}
 [[Category:Вѣра]]
 [[Category:Боги|*]]
 
