--- a/Аѳинꙑ.mw
+++ b/Аѳинꙑ.mw
@@ -1,15 +1,15 @@
 {{Градъ|Имѧ = Аѳины
 | знамѧ= Flag-Athens.png
 | знакъ = 
-| Дрьжава = [[Грьци]]
+| Дрьжава = {{Грькъ знамѧ}}[[Грьци]]
 | Глава = 
-| Людии =  
+| Людии =  3 761 810
 | Основанъ = исто невѣдомо ѥстъ, прѣдъ е҄ вѣкомь до х҃р
 | Харта = [[Видъ:Localition Atene.png|200 px]]
 |}}
-'''Аѳи́ны''' ([[Грьчьскъ ѩзыкъ|грьчьскы]]: ''Αθήναι'', ''Αθήνα'') [[Грьци|Грькъ]] стольнъ градъ ѥстъ.
+'''Аѳи́ны''' ([[Грьчьскъ ѩзыкъ|грьчьскы]]: ''Αθήναι'', ''Αθήνα'') [[Грьци|Грькъ]] стольнъ градъ ѥстъ. Людии обитаѥтъ 3 761 810.
 
-[[Category:All orphaned pages]]
+{{commonscat|Athens}}
 [[Category:Гради]]
 [[Category:Стольни гради]]
 [[Category:Грьци]]
