*Empty MediaWiki Message*

--- a/Асєнѥвъ_Градъ.mw
+++ b/Асєнѥвъ_Градъ.mw
@@ -7,7 +7,7 @@
 | Основанъ = ~3 тысѫщи лѣтъ до ХР
 | Харта = 
 }}
-'''Асенѥвъ Градъ''' ({{lang-bg|Асеновградъ}}) [[Блъгарї|Блъгарїи]] ѥстъ. Людии обитаѥтъ 56 тысѫщь. Асенѥвъ Градъ [[Плъпъдевьска область|Плъпъдевьскы области]] главьнъ ѥстъ. 
+'''Асенѥвъ Градъ''' ({{lang-bg|Асеновград}}) [[Блъгарї|Блъгарїи]] ѥстъ. Людии обитаѥтъ 56 тысѫщь. Асенѥвъ Градъ [[Плъпъдевьска область|Плъпъдевьскы области]] главьнъ ѥстъ. 
 [[Катигорї:Гради]]
 [[Катигорї:Блъгарї]]
 
