--- a/Грьци.mw
+++ b/Грьци.mw
@@ -14,7 +14,7 @@
 == Їсторї ==
 [[Видъ:Flag of Greece (1828-1978).svg|thumb|left|Грькь знамѧ (1828—1978).]]1453 лѣта [[Вѷзантїн҄ьска аѷтократорї]] въшьла въ съставъ Осман҄ьскы аѷтократорїѩ бѣ. 1821 лѣта по народьнѣ въстании Грьци ѥстъ пакы самостотел҄ьна дрьжава. По 1833 лѣтѣ ихъже имѧ Грьчьско Кралѥвьство бѣ. По [[Вътора Свѣтьна Воина|Въторѣи Свѣтьнѣи Воинѣ]] Грьци пакы димократї ѥстъ.
 
-1981 лѣта Грьци въшьли въ съставъ [[Еѵропьскыи Свѫзъ|Еѵропьскы Свѫзи]] бѣ.
+1981 лѣта Грьци въшьли въ съставъ [[Еѵрѡпьскыи Свѫзъ|Еѵрѡпьскы Свѫзи]] бѣ.
 
 == Грькъ чѧсти ==
 Грьчьскы Димократїѩ чѧсти перїферїѧ ({{Lang-el|περιφέρειες}}) нарицаютъ. Ихъже малы чѧсти имѧ номи ({{Lang-el|νομός}}) сѫтъ.
