*Empty MediaWiki Message*

--- a/Растовъ.mw
+++ b/Растовъ.mw
@@ -1,13 +1,50 @@
-{{Градъ|Имѧ = Растовъ
-| знамѧ= Flag of Rostov (Yaroslavl oblast).png
-| знакъ = Coat of Arms of Rostov (Yaroslavl oblast).png
+{{Градъ|Имѧ = Чебокъсары 
+| знамѧ=[[Изображение:Flag Cheboksary.jpg|150px|Флаг Чебоксар]]||442,6 (2005)|8352|0|yan_map=map_search.xml?map=5&lay=28&id=2181|city_map=http://www.cheboksary.ws/|coor={{coor|56|08|N|47|15|E|type:city(442600)_region:RU}}|| знакъ = coat_of_arms_link=[[Герб Чебоксар]]}}
+'''Чебокса́ры''' ({{lang-cv|Шупашкар}}) — город в [[Россия|России]], столица [[Чувашия|Чувашской Республики]].
 | Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
-| Глава = 
-| Людии =  33,6 тысѫщь
-| Основанъ = 
+| Глава = Емельянов Николай Иванович
+| Людии =  442,6 тысѫщь
+| Основанъ = 1469
 | Харта =
 |}}
-'''Растовъ''' ([[рѹсьскъ ѩзыкъ|рѹсьскы]] ''Ростов'') [[Рѡсї|Рѡсїѩ]] [[рославл҄ьска область|рославл҄ьскы]] области [[Растовьска чѧсть|Растовьскы]] чѧсти главьнъ градъ ѥстъ. Людии 33,6 тысѫщь сѫтъ (2005). Градъ ѥзера [[Неро|Нера]] брѣѕѣ лежитъ. Растовъ Рѡсїѩ ѥдинъ и старѣишиихъ градъ ѥстъ, иже Рѡсїи иногда Великыи нарицаѭтъ, да не съмѣшати съ [[Растовъ на Донѣ|Растова на Донѣ]] именьмь.
+
+
+'''Чебокъсары''' ([[рѹсьскъ ѩзыкъ|рѹсьскы]] Чебоксары'') [[Рѡсї|Рѡсїѩ]]  Градъ Рѡсїѩ, Чоувашїѩ стольнъ градъ ѥстъ. Построѥнъ ѥстъ рѣцѣ Вълогѣ, людии обитаѥтъ 442,6 тысѧщь. Основанъ лѣта 1453 ѥстъ. 
 
 [[Катигорї:Гради]]
 [[Катигорї:Рѡсї]]
+
+
+{{Город России|Чебоксары|[[Изображение:Coat_of_Arms_of_Cheboksary_(Chuvashia).png|150px]]|[[Чувашская Республика]]||[[1469]]|[[1781]]|||flag=[[Изображение:Flag Cheboksary.jpg|150px|Флаг Чебоксар]]||442,6 (2005)|8352|0|yan_map=map_search.xml?map=5&lay=28&id=2181|city_map=http://www.cheboksary.ws/|coor={{coor|56|08|N|47|15|E|type:city(442600)_region:RU}}|mojgorod=chuvashsk_r/cheboksary|status=республиканское|coat_of_arms_link=[[Герб Чебоксар]]}}
+'''Чебокса́ры''' ({{lang-cv|Шупашкар}}) — город в [[Россия|России]], столица [[Чувашия|Чувашской Республики]].
+
+Население 442,6 тыс. чел. ([[2005]]).
+
+[[bg:Чебоксари]]
+[[ca:Txeboksari]]
+[[cs:Čeboksary]]
+[[cv:Шупашкар]]
+[[de:Tscheboksary]]
+[[en:Cheboksary]]
+[[eo:Ĉeboksari]]
+[[es:Cheboksary]]
+[[et:Tšeboksarõ]]
+[[fa:چاباق‌سر]]
+[[fi:Tšeboksary]]
+[[fr:Tcheboksary]]
+[[he:צ'בוקסרי]]
+[[hr:Čeboksari]]
+[[hu:Csebokszari]]
+[[id:Cheboksary]]
+[[it:Čeboksary]]
+[[ja:チェボクサル]]
+[[ko:체복사리]]
+[[lmo:Cheboksary]]
+[[nl:Tsjeboksary]]
+[[nn:Tsjeboksary]]
+[[no:Tsjeboksary]]
+[[os:Чебоксары]]
+[[pl:Czeboksary]]
+[[ro:Cheboksary]]
+[[sv:Tjeboksary]]
+[[zh:切博克萨雷]]
