--- a/Растовъ.mw
+++ b/Растовъ.mw
@@ -1,1 +1,13 @@
+{{Градъ|Имѧ = Растовъ
+| знамѧ= Flag of Rostov (Yaroslavl oblast).png
+| знакъ = Coat of Arms of Rostov (Yaroslavl oblast).png
+| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
+| Глава = 
+| Людии =  33,6 тысѫщь
+| Основанъ = 
+| Харта =
+|}}
+'''Растовъ''' ([[рѹсьскъ ѩзыкъ|рѹсьскы]] ''Ростов'') [[Рѡсї|Рѡсїѩ]] [[рославл҄ьска область|рославл҄ьскы]] области [[Растовьска чѧсть|Растовьскы]] чѧсти главьнъ градъ ѥстъ. Людии 33,6 тысѫщь сѫтъ (2005). Градъ ѥзера [[Неро|Нера]] брѣѕѣ лежитъ. Растовъ Рѡсїѩ ѥдинъ и старѣишиихъ градъ ѥстъ, иже Рѡсїи иногда Великыи нарицаѭтъ, да не съмѣшати съ [[Растовъ на Донѣ|Растова на Донѣ]] именьмь.
 
+[[Катигорї:Гради]]
+[[Катигорї:Рѡсї]]
