чоувашъскъ!? по-моему, таки нет, но воздержусь

--- a/Шоупашкаръ.mw
+++ b/Шоупашкаръ.mw
@@ -6,14 +6,9 @@
 | Основанъ = лѣта 1469 
 | Харта =
 |}}
-'''Чебокъсары ''' ([[рѹсьскъ ѩзыкъ|рѹсьскы]] ''Чебоксары '', [[чоувашъскъ]]  ''Шупашкар'') [[Рѡсї|Рѡсїѩ]].
+'''Чебокъсары ''' ({{lang-ru|Чебоксары}}, [[чоувашъскъ ѩзыкъ|чоувашъскы]]: ''Шупашкар'') градъ [[Рѡсї|Рѡсїѩ]], Чоувашїѩ стольнъ градъ ѥстъ. Построѥнъ ѥстъ рѣцѣ Вълѕѣ, людии обитаѥтъ 442,6 тысѧщь. Основанъ лѣта 1469 ѥстъ
 
-Градъ Рѡсїѩ, Чоувашїѩ стольнъ градъ ѥстъ. Построѥнъ ѥстъ рѣцѣ Вълогѣ, людии обитаѥтъ 442,6 тысѧщь. Основанъ лѣта 1469 ѥстъ
-
-
-
-
-
+{{commonscat|Cheboksary}}
 [[Катигорї:Гради]]
 [[Катигорї:Рѡсї]]
 
