--- a/Кавала.mw
+++ b/Кавала.mw
@@ -6,9 +6,10 @@
 [[de:Kavala]]
 [[el:Καβάλα]]
 [[en:Kavala]]
-[[es:Kavala (prefectura)]]
+[[es:Kavala]]
 [[fi:Kavala]]
 [[fr:Kavala]]
+[[it:Kavala]]
 [[nl:Kavála (stad)]]
 [[nn:Kavala]]
 [[pl:Kawala (miasto)]]
