*Empty MediaWiki Message*

--- a/Кавала.mw
+++ b/Кавала.mw
@@ -1,6 +1,16 @@
-'''Кавала''' ѥстъ градъ [[Грьци|Грьцѣхъ]]. 
+{{Градъ|Имѧ = Кавала
+| знамѧ= 
+| знакъ = 
+| Дрьжава = {{Грькъ знамѧ}}[[Грьци]]
+| Глава = 
+| Людии =  63,293
+| Основанъ = 
+| Харта = [[Видъ:Kavala location.jpg|200 px]]
+|}}
+'''Кавала''' ({{lang-el|Καβάλα}}) ѥстъ градъ [[Грьци|Грьцѣхъ]]. Людии обитаѥтъ 63,293.
+{{commonscat|Kavala}}
 [[Category:Гради]]
-
+[[Category:Грьци]]
 [[ar:كافالا]]
 [[bg:Кавала]]
 [[de:Kavala]]
