--- a/Вьсєволожьскъ.mw
+++ b/Вьсєволожьскъ.mw
@@ -1,7 +1,7 @@
-{{Градъ|name = Вьсеволожьскъ
+{{Градъ|Имѧ = Вьсеволожьскъ
 | знамѧ= 
 | знакъ = Coat of Arms of Vsevolozhsk (Leningrad oblast).png
-| Дрьжава = Рѡсї
+| Дрьжава = {{Рѡсїѩ знамѧ}}[[Рѡсї]]
 | Глава = 
 | Людии = 45 тысѫщь
 | Основанъ = 1892
