*Empty MediaWiki Message*

--- a/Львъ.mw
+++ b/Львъ.mw
@@ -1,6 +1,7 @@
 [[Image:Lion lying 2.jpg|thumb|Львъ]]
 '''Львъ''' ({{lang-la|Panthera leo}}) ѥстъ звѣрь котьскыѩ сѣмиѩ.
 
+{{commonscat|Panthera leo}}
 {{Link FA|de}}
 {{Link FA|fr}}
 {{Link FA|it}}
@@ -8,7 +9,6 @@
 {{Link FA|pl}}
 {{Link FA|fi}}
 
-[[Category:All orphaned pages]]
 [[Category:Звѣриѥ]]
 
 [[af:Leeu]]
