*Empty MediaWiki Message*

--- a/Лисъ.mw
+++ b/Лисъ.mw
@@ -1,7 +1,7 @@
 [[Image:Vulpes vulpes.jpg|thumb|Лисъ]]
 '''Лисъ''' ([[ѩзыкъ латиньскъ|латиньскы]]: ''Vulpes vulpes'') ѥстъ звѣрь пьсиѩ сѣмиѩ.
 
-[[Category:All orphaned pages]]
+{{commonscat|Vulpes vulpes}}
 [[Category:Звѣриѥ]]
 
 [[bg:Лисица]]
