*Empty MediaWiki Message*

--- a/Мєждоународьнъ_мѣръ_сѷстима.mw
+++ b/Мєждоународьнъ_мѣръ_сѷстима.mw
@@ -1,4 +1,7 @@
 '''Междѹнародьнъ мѣръ сѷстима''' (ММ҄С, {{lang-fr|Système International d’Unités, SI}}) [[метрїчьна сѷстима|метрїчьны сѷстимы]] нынѣщьн҄ь образъ.
 
+==Зьри такожде==
+* [[Метро]]
+
 [[Category:Междѹнародьнъ мѣръ сѷстима| ]]
 [[ru:СИ]]
