Мъногочисменьны и дѣтьскы блазны исправихъ.

--- a/Православиѥ.mw
+++ b/Православиѥ.mw
@@ -1,6 +1,4 @@
-(under construction)
-
-[[Image:OrthodoxCross.png|80px|center]] 
+[[Image:OrthodoxCross.png|80px|right]] 
 
 {|align="center" border="0" cellpadding="10" cellspacing="0"
 |-
@@ -16,11 +14,11 @@
 
 
 
-'''Православиѥ''' ({{lang-el|ὀρθοδοξία}} — си рѣчь праведъно  сужденїе, похваленїе) роди сѧ на востцѣ, вѣ началѣ первагѡ вѣка по рождьствѣ Хрїстовѣ. Православиѥ [[ѥдинобожиѥ|ѥдинобожи]] вѣра ѥстъ же основана ѥстъ на ѹчении [[Їисѹсъ Хрїстосъ|Їисѹ Хрїста]] ко издречено о сѥмь [[Новыи Завѣтъ|Новѣѥмь Завѣтѣ]] ѥстъ и же исповѣдуетъ Симъволъ Вѣры еже Никеискъ съборъ лѣта 325  по рождьствѣ Хрїстовѣ и  Цѣсарьградъскъ съборъ лѣта 381 по рождьствѣ Хрїстовѣ оуставили сѫть.
+'''Православиѥ''' ({{lang-el|ὀρθοδοξία}} «исто сѫждение») сѧ [[Въстокъ|Въстоцѣ]] А вѣка по ХР ави. Православиѥ [[ѥдинобожиѥ|ѥдинобожи]] вѣра ѥстъ же сѧ на [[Їисъ Хрїстъ|Їисѹ Хрїста]] ѹчении зиждетъ, ко издречено о сѥмь [[Новыи Завѣтъ|Новѣѥмь Завѣтѣ]] ѥстъ, и же [[Вѣры Сѷмволъ]] исповѣдѹѥтъ, иже Нїкеискъ съборъ лѣта 325 по ХР и  [[Цѣсар҄ь Градъ|Цѣсарѥградъскъ]] съборъ лѣта 381 по ХР оуставила ѥсте.
 
 
 
-[[Image:Eastern-orthodoxy-world-by-country.png|right|thumb|450px|Страни в нихѣже Православиѥ перъва вѣра ѥстъ или крѣпко ѥстъ ]]
+[[Image:Eastern-orthodoxy-world-by-country.png|right|thumb|450px|Дрьжавы, ихъже Православиѥ стрьто ѥстъ]]
 
 
 
