статїи видъ исправихъ

--- a/Православиѥ.mw
+++ b/Православиѥ.mw
@@ -1,24 +1,11 @@
-[[Image:OrthodoxCross.png|80px|right]] 
-
-{|align="center" border="0" cellpadding="10" cellspacing="0"
-|-
-| <center>[[Image:Vladimirskaya.jpg|80px]]</center>
-|<center> <div style="font-weight: normal; font-size:250%; margin: 0; padding-top: 0.5em; padding-bottom: 0.5em;">
-<br/>Православиѥ</div> 
-| [[Image:Deesis.jpg|100px]]
-|}
-<br/>
-{| width="100%" align="center" border="0" cellpadding="4" cellspacing="4" style="border: 1px solid #CCCC99; background-color: #F5F5DD"
-|- valign="top"
-| width="50%" |
-
+[[Image:Vladimirskaya.jpg|80px|right]] [[Image:Deesis.jpg|100px|right]]
 
 
 '''Православиѥ''' ({{lang-el|ὀρθοδοξία}} «исто сѫждение») сѧ [[Въстокъ|Въстоцѣ]] А вѣка по ХР ави. Православиѥ [[ѥдинобожиѥ|ѥдинобожи]] вѣра ѥстъ же сѧ на [[Їисъ Хрїстъ|Їисѹ Хрїста]] ѹчении зиждетъ, ко издречено о сѥмь [[Новыи Завѣтъ|Новѣѥмь Завѣтѣ]] ѥстъ, и же [[Вѣры Сѷмволъ]] исповѣдѹѥтъ, иже Нїкеискъ съборъ лѣта 325 по ХР и  [[Цѣсар҄ь Градъ|Цѣсарѥградъскъ]] съборъ лѣта 381 по ХР оуставила ѥсте.
 
 
 
-[[Image:Eastern-orthodoxy-world-by-country.png|right|thumb|450px|Дрьжавы, ихъже Православиѥ стрьто ѥстъ]]
+[[Image:Eastern-orthodoxy-world-by-country.png|left|thumb|450px|Дрьжавы, ихъже Православиѥ стрьто ѥстъ]]
 
 
 
