--- a/Православиѥ.mw
+++ b/Православиѥ.mw
@@ -7,7 +7,7 @@
 
 [[Image:Eastern-orthodoxy-world-by-country.png|left|thumb|450px|Дрьжавы, ихъже Православиѥ стрьто ѥстъ]]
 
-
+{{Commonscat|Orthodox Church}}
 
 
 [[Катигорї:Хрїстїаньство]]
