--- a/Хрїстїаньство.mw
+++ b/Хрїстїаньство.mw
@@ -1,7 +1,7 @@
 [[Видъ:Christianity percentage by country.png|thumb]]
 '''Хрїстїаньство''' [[ѥдинобожиѥ|ѥдинобожи]] вѣра ѥстъ, же основана ѥстъ на ѹчении [[Їисѹсъ Хрїстосъ|Їисѹ Хрїста]] ко издречено о сѥмь [[Новыи Завѣтъ|Новѣѥмь Завѣтѣ]] ѥстъ. Нынѣ хрїстїаньство сѧ мъногы образы влѥтъ, сѥго дѣл҄ьма нѣстъ възможьности глаголати ко ѥдина вѣра ѥстъ. Хрїстїаньство надѣлѥно на мъногы тлъковани ѥстъ, бол҄ьша из ихъже [[Православиѥ]], [[Римьскъ Каѳолїкїсмъ]] и [[Папоборьчьска Вѣра]] (Протестантїсмъ).
-
-[[Катигорї:Хрїстїаньство]]
+{{Commonscat|Christianity}}
+[[Катигорї:Хрїстїаньство|*]]
 [[Катигорї:Вѣра]]
 
 [[af:Christendom]]
