*Empty MediaWiki Message*

--- a/Православиѥ.mw
+++ b/Православиѥ.mw
@@ -7,7 +7,11 @@
 
 [[Image:Eastern-orthodoxy-world-by-country.png|left|thumb|450px|Дрьжавы, ихъже Православиѥ стрьто ѥстъ]]
 
+== Зьри такожде ==
 {{Commonscat|Orthodox Church}}
+* [[Хрїстїаньство]]
+* [[Римьскъ Каѳолїкїсмъ]]
+* [[Папоборьчьска Вѣра]]
 
 
 [[Катигорї:Хрїстїаньство]]
