*Empty MediaWiki Message*

--- a/Антарктїка.mw
+++ b/Антарктїка.mw
@@ -4,3 +4,9 @@
 {{Свѣта чѧсти}}
 [[Category:Свѣта чѧсти]]
 [[ru:Антарктика]]
+[[be:Антарктыка]]
+[[bg:Антарктика]]
+[[de:Antarktis]]{{Link FA|de}}
+[[no:Antarktis]]
+[[pl:Antarktyka]]
+[[uk:Антарктика]]
