--- a/Тошѧ_Проѥвьскꙑи.mw
+++ b/Тошѧ_Проѥвьскꙑи.mw
@@ -1,3 +1,19 @@
 '''Тошѧ Проѥвьскыи''' ({{lang-mk|Тоше Проески}}, истиньно имѧ '''Ѳеодоръ Проѥвьскыи''', {{lang-mk|Тодор Проески}}) великъ македоньскъ пѣснопѣвьць бѣаше. Мноѕи мыслѧтъ ко наибол҄ии югословѣньскъ пѣвьць бѣаше. Своѥ пѣвьчьско дѣло года 1997 начѧтъ, о тѣхъ поръ 12 диска съ моусїкоѭ издастъ. Посъланъ бѣ о Македонїѩ года 2004 на Еѵрѡпьско пѣсньчьско съпрьничьство [[Еѵрѡвидениѥ]]. Погыбнѫ нежьданьнѣ [[Хръватьска|Хръватьсцѣ]] октѡврї 16 числа 2007 года въ зълѣ аѵтокїнитьсцѣ слѹчаи.
 
 [[Катигорї:Македонї]] [[Катигорї:Пѣвьци]] [[Катигорї:Люди]]
+
+[[bs:Toše Proeski]]
+[[bg:Тоше Проески]]
+[[de:Toše Proeski]]
+[[en:Toše Proeski]]
+[[et:Toše Proeski]]
+[[el:Τόσε Πρόεσκι]]
+[[es:Toše Proeski]]
+[[fr:Toše Proeski]]
+[[hr:Toše Proeski]]
+[[mk:Тоше Проески]]
+[[nl:Toše Proeski]]
+[[sl:Toše Proeski]]
+[[sr:Тоше Проески]]
+[[fi:Toše Proeski]]
+[[sv:Toše Proeski]]
