ѥще блазнѫ исправихъ и Тошете видъ додахъ

--- a/Тошѧ_Проѥвьскꙑи.mw
+++ b/Тошѧ_Проѥвьскꙑи.mw
@@ -1,4 +1,6 @@
-'''Тошѧ Проѥвьскыи''' ({{lang-mk|Тоше Проески}}, истиньно имѧ '''Ѳеодѡръ Проѥвьскыи''', {{lang-mk|Тодор Проески}}) великъ македоньскъ пѣснопѣвьць бѣаше. Мъноѕи мыслѧтъ ко наибол҄ии югословѣньскъ пѣвьць бѣаше. Рожденъ бѣ їанѹарї 25 числа года 1981 [[Прилѣп]]ѣ, [[Македонї|Македонїи]]. Своѥ пѣвьчьско дѣло года 1997 начѧтъ, о тѣхъ поръ 12 диска съ моусїкоѭ издастъ. Избьранъ бѣ года 2004 посланьць добры вол҄и [[Ѥдинѥнъ народъ съвѣта дѣтьска чѧсть|ѤНСД҃Ч]] и того дѣл напьса ѩ епїсимьнѫѭ пѣснь ({{lang-mk|За овој свет}} („За сь свѣтъ“), {{lang-en|This World}} („Сь свѣтъ“)). Посъланъ бѣ о Македонїѩ тогожде года на Еѵрѡпьско пѣсньчьско съпрьничьство [[Еѵрѡвидениѥ]]. Погыбнѫ нежьданьнѣ [[Хръватьска|Хръватьсцѣ]] октѡврї 16 числа 2007 года въ зълѣ аѵтокїнитьсцѣ слѹчаи.
+'''Тошѧ Проѥвьскыи''' ({{lang-mk|Тоше Проески}}, истиньно имѧ '''Ѳеодѡръ Проѥвьскыи''', {{lang-mk|Тодор Проески}}) великъ македоньскъ пѣснопѣвьць бѣаше. Мъноѕи мыслѧтъ ко наибол҄ии югословѣньскъ пѣвьць бѣаше. Рожденъ бѣ їанѹарї 25 числа года 1981 [[Прилѣп]]ѣ, [[Македонї|Македонїи]]. Своѥ пѣвьчьско дѣло года 1997 начѧтъ, о тѣхъ поръ 13 диска съ моусїкоѭ издастъ. Избьранъ бѣ года 2004 посланьць добры вол҄и [[Ѥдинѥнъ народъ съвѣта дѣтьска чѧсть|ѤНСД҃Ч]] и того дѣл напьса ѩ епїсимьнѫѭ пѣснь ({{lang-mk|За овој свет}} („За сь свѣтъ“), {{lang-en|This World}} („Сь свѣтъ“)). Посъланъ бѣ о Македонїѩ тогожде года на Еѵрѡпьско пѣсньчьско съпрьничьство [[Еѵрѡвидениѥ]]. Погыбнѫ нежьданьнѣ [[Хръватьска|Хръватьсцѣ]] октѡврї 16 числа 2007 года въ зълѣ аѵтокїнитьсцѣ слѹчаи.
+
+[[image:Tose_Proeski.jpg|right|thumb|Тошѧ Проѥвьскыи]]
 
 [[Катигорї:Македонї]] [[Катигорї:Пѣвьци]] [[Катигорї:Людиѥ]]
 
