*Empty MediaWiki Message*

--- a/Прилѣпъ.mw
+++ b/Прилѣпъ.mw
@@ -1,5 +1,6 @@
 '''Прилѣпъ''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. 
 [[Category:Гради]]
+[[Category:Македонї]]
 
 [[bg:Прилеп (град)]]
 [[bs:Prilep]]
