*Empty MediaWiki Message*

--- a/Антоуанъ_Мєѥ.mw
+++ b/Антоуанъ_Мєѥ.mw
@@ -1,7 +1,7 @@
 '''Антѹа́н Меѥ́''' ([[франкїискъ ѩзыкъ|франкїискы]] Paul-Jules-Antoine Meillet, [[Ноемврїи, 11 дьнь|Ноемврї 11]], [[1866]] года — [[Септемврїи, 21 дьнь|Септемврї 21]] [[1936]]) [[К-оѥ столѣтиѥ|К-аѥго столѣти]] ѥдинъ о наивеличаишиихъ [[Франкї|франкїискъ]] [[ѩзыковѣдъ|ѩзыковѣдъ]] бѣаше. Меѥ почьне своѩ наѹкы [[Сорбонна|Сорбонны]] панепїстимїии, иде ѥмѹ довьлѣли  [[Мишелъ Бреалъ]], [[Фердинандъ де Соссѷръ]] и [[Année Sociologique]] члѣни бѣаше. 1890 года име ѹчѧстиѥ ислѣдовател҄ьсцѣ ходѣ Каѵкасїискамъ горамъ, иде изѹчи [[армѣньскъ ѩзыкъ]]. Послѣди своѥго възвращени пакы наѹкы съ Соссѷромь дѣлааше.
 
 {{stub}}
-[[Category:Людиѥ]]
+[[Category:Людиѥ|Меѥ]]
 
 [[de:Antoine Meillet]]
 [[en:Antoine Meillet]]
