--- a/Виллиамъ_Флиндєрсъ_Пєтри.mw
+++ b/Виллиамъ_Флиндєрсъ_Пєтри.mw
@@ -1,6 +1,6 @@
 '''Виллиамъ Флиндерсъ Петри''' ({{Lang-en|William Matthew Flinders Petrie}}, 1853—1942) [[Велика Британї|англїискъ]] археологъ бѣ, обрѣтыи [[Абѷдъ|Абѷдѣ]] фараѡнъ гробы. 
 
-[[Category:Людиѥ]]
+[[Category:Людиѥ|Флиндерсъ Петри]]
 
 [[ca:Flinders Petrie]]
 [[de:Flinders Petrie]]
