*Empty MediaWiki Message*

--- a/Владимиръ_Поутинъ.mw
+++ b/Владимиръ_Поутинъ.mw
@@ -1,6 +1,6 @@
 [[Видъ:Russia.VladimirPutin.01.jpg|thumb|Владимиръ Пѹтинъ]]'''Владимиръ Владимировичь Пѹтинъ''' ({{lang-ru|Владимир Владимирович Путин}}) ѥстъ въторыи глава и прѣдъсѣдател̑ь [[Рѡссїскыи Съвѫзъ|Рѡсїѩ]]. Рожденъ ѥстъ [[Лѣнинаградъ|Лѣнинаградѣ]] (дьньсь [[Санктъ-Петербѹргъ]]) лѣтѣ [[1952]]. Трѫдише сѧ министрьствѣ дрьжавьнаѥго опасени Нѣмьцѣхъ, по томь Петербѹржьсцѣ ѹправѣ града помощьникъ градьскаѥго главы. Лѣтѣ [[1998]] възглави съвѫзьнѫѭ слѹжьбѫ опасени Рѡсїѩ. Лѣтѣ [[1999]] ави сѧ прѣдъсѣдател̑ь правител̑ьства, того же лѣта [[декемвриıa 31]] отрече сѧ прьвыи прѣдъсѣдател̑ь [[Борисъ Ѥльцинъ]] о власти. Весноѭ [[2000]] Владимиръ Пѹтинъ избьранъ бы прѣмыимь гласованиѥмь прѣдъсѣдател̑ь Рѡсїѩ на четыре лѣта, лѣтѣ [[2004]] прѣизбьранъ ѥстъ на вътороѥ врѣмѧ.
 
-[[Category:Людиѥ]]
+[[Category:Людиѥ|Пѹтинъ]]
 [[Category:Рѡсї]]
 
 [[af:Vladimir Poetin]]
