robot  Adding: [[el:Περιφέρεια Μόσχας]]

--- a/Москъвьска_область.mw
+++ b/Москъвьска_область.mw
@@ -11,6 +11,7 @@
 [[cv:Мускав облаçĕ]]
 [[da:Moskva Oblast]]
 [[de:Oblast Moskau]]
+[[el:Περιφέρεια Μόσχας]]
 [[en:Moscow Oblast]]
 [[eo:Moskva provinco]]
 [[es:Óblast de Moscú]]
