--- a/Тошѧ_Проѥвьскꙑи.mw
+++ b/Тошѧ_Проѥвьскꙑи.mw
@@ -1,4 +1,4 @@
-'''Тошѧ Проѥвьскыи''' ({{lang-mk|Тоше Проески}}, истиньно имѧ '''Ѳеодѡръ Проѥвьскыи''', {{lang-mk|Тодор Проески}}) великъ македоньскъ пѣснопѣвьць бѣаше. Мъноѕи мыслѧтъ ко наибол҄ии югословѣньскъ пѣвьць бѣаше. Рожденъ бѣ їанѹарї 25 числа года 1981 [[Прилѣпъ|Прилѣпѣ]], [[Македонї|Македонїи]]. Своѥ пѣвьчьско дѣло года 1997 начѧтъ, о тѣхъ поръ 13 дїскы съ моусїкоѭ издастъ. Избьранъ бѣ года 2004 посъланьць добры волѩ [[Ѥдинѥнъ народъ съвѣта дѣтьска чѧсть|ѤНСД҃Ч]] и того дѣл напьса ѩ епїсимьнѫѭ пѣснь ({{lang-mk|За овој свет}} („За сь свѣтъ“), {{lang-en|This World}} („Сь свѣтъ“)). Посъланъ бѣ о Македонїѩ тогожде года на Еѵрѡпьско пѣвьчьско сѫпрьничьство [[Еѵрѡвидениѥ]]. Погыбнѫ нежьданьнѣ [[Хръватьска|Хръватьсцѣ]] октѡврї 16 числа 2007 года въ зълѣ аѵтокїнитьсцѣ слѹчаи.
+'''Тошѧ Проѥвьскыи''' ({{lang-mk|Тоше Проески}}, истиньно имѧ '''Ѳеодѡръ Проѥвьскыи''', {{lang-mk|Тодор Проески}}) великъ македоньскъ пѣснопѣвьць бѣаше. Мъноѕи мыслѧтъ ко наибол҄ии югословѣньскъ пѣвьць бѣаше. Рожденъ бѣ лѣта 1981 їанѹарї 25 числа  [[Прилѣпъ|Прилѣпѣ]], [[Македонї|Македонїи]]. Своѥ пѣвьчьско дѣло лѣта 1997 начѧтъ, о тѣхъ поръ 13 дїскы съ моусїкоѭ издастъ. Избьранъ бѣ лѣта 2004 посъланьць добры волѩ [[Ѥдинѥнъ народъ съвѣта дѣтьска чѧсть|ѤНСД҃Ч]] и того дѣл напьса ѩ епїсимьнѫѭ пѣснь ({{lang-mk|За овој свет}} („За сь свѣтъ“), {{lang-en|This World}} („Сь свѣтъ“)). Посъланъ бѣ о Македонїѩ тогожде лѣта на Еѵрѡпьско пѣвьчьско сѫпрьничьство [[Еѵрѡвидениѥ]]. Погыбнѫ нежьданьнѣ [[Хръватьска|Хръватьсцѣ]] 2007 лѣта октѡврї 16 числа въ зълѣ аѵтокїнитьсцѣ слѹчаи.
 
 [[image:Tose_Proeski.jpg|right|thumb|Тошѧ Проѥвьскыи]]
 
