robot  Adding: [[cy:Rwsiaid]] Modifying: [[da:Russere]]

--- a/Роусьсци.mw
+++ b/Роусьсци.mw
@@ -12,7 +12,8 @@
 [[bg:Руснаци]]
 [[cs:Rusové]]
 [[cv:Вырăссем]]
-[[da:Russer]]
+[[cy:Rwsiaid]]
+[[da:Russere]]
 [[de:Russen]]
 [[el:Ρώσοι]]
 [[en:Russians]]
