*Empty MediaWiki Message*

--- a/Тошѧ_Проѥвьскꙑи.mw
+++ b/Тошѧ_Проѥвьскꙑи.mw
@@ -2,7 +2,7 @@
 
 [[image:Tose_Proeski.jpg|right|thumb|Тошѧ Проѥвьскыи]]
 
-[[Катигорї:Македонї]] [[Катигорї:Пѣвьци]] [[Катигорї:Людиѥ]]
+[[Катигорї:Македонї]] [[Катигорї:Пѣвьци]] [[Катигорї:Людиѥ|Проѥвьскыи]]
 
 [[bs:Toše Proeski]]
 [[bg:Тоше Проески]]
