--- a/Шоупашкаръ.mw
+++ b/Шоупашкаръ.mw
@@ -1,12 +1,12 @@
-{{Градъ|Имѧ = Чебокъсары
+{{Градъ|Имѧ = Шѹпашкаръ
 | знакъ = Coat_of_Arms_of_Cheboksary_%28Chuvashia%29.png
 | Дрьжава = {{Рѡсїѩ знамѧ}}  Рѡсї
-| Глава =  Емельянов Николай Иванович
+| Глава =  Ѥмельновъ Нїколай Ивановичь
 | Людии =  442,6 тысѫщь
 | Основанъ = лѣта 1469 
 | Харта =
 |}}
-'''Чебокъсары ''' ({{lang-ru|Чебоксары}}, [[чоувашъскъ ѩзыкъ|чоувашъскы]]: ''Шупашкар'') градъ [[Рѡсї|Рѡсїѩ]], Чоувашїѩ стольнъ градъ ѥстъ. Построѥнъ ѥстъ рѣцѣ Вълѕѣ, людии обитаѥтъ 442,6 тысѧщь. Основанъ лѣта 1469 ѥстъ
+'''Шѹпашка́ръ''' ({{lang-cv|Шупашкар}}, {{lang-ru|Чебоксары}}) [[Рѡсї|Рѡсїѩ]], [[Чьвашьска Димократїıа|Чьвашьскы Димократїѩ]] стольнъ градъ ѥстъ. Построѥнъ Вълѕѣ рѣцѣ ѥстъ, людии обитаѥтъ 442,6 тысѧщь. Основанъ лѣта 1469 ѥстъ
 
 {{commonscat|Cheboksary}}
 [[Катигорї:Гради]]
