--- a/Тошѧ_Проѥвьскꙑи.mw
+++ b/Тошѧ_Проѥвьскꙑи.mw
@@ -1,4 +1,4 @@
-'''Тошѧ Проѥвьскыи''' ({{lang-mk|Тоше Проески}}, истиньно имѧ '''Ѳеодѡръ Проѥвьскыи''', {{lang-mk|Тодор Проески}}) великъ македоньскъ пѣснопѣвьць бѣаше. Мъноѕи мыслѧтъ ко наибол҄ии югословѣньскъ пѣвьць бѣаше. Рожденъ бѣ лѣта 1981 їанѹарї 25 числа  [[Прилѣпъ|Прилѣпѣ]], [[Македонї|Македонїи]]. Своѥ пѣвьчьско дѣло лѣта 1997 начѧтъ, о тѣхъ поръ 13 дїскы съ моусїкоѭ издастъ. Избьранъ бѣ лѣта 2004 посъланьць добры волѩ [[Ѥдинѥнъ народъ съвѣта дѣтьска чѧсть|ѤНСД҃Ч]] и того дѣл напьса ѩ епїсимьнѫѭ пѣснь ({{lang-mk|За овој свет}} („За сь свѣтъ“), {{lang-en|This World}} („Сь свѣтъ“)). Посъланъ бѣ о Македонїѩ тогожде лѣта на Еѵрѡпьско пѣвьчьско сѫпрьничьство [[Еѵрѡвидениѥ]]. Погыбнѫ нежьданьнѣ [[Хръватьска|Хръватьсцѣ]] 2007 лѣта октѡврї 16 числа въ зълѣ аѵтокїнитьсцѣ слѹчаи.
+'''Тошѧ Проѥвьскыи''' ({{lang-mk|Тоше Проески}}, исто имѧ '''Ѳеодѡръ Проѥвьскыи''', {{lang-mk|Тодор Проески}} ѥстъ. нѹарї 25 дьне 1981 — октѡврї 16 дьне 2007) великъ македоньскъ пѣвьць бѣаше. Мъноѕи мыслѧтъ ко наибол҄ии [[Югослави|югословѣньскъ]] пѣвьць бѣ. Рожденъ [[Прилѣпъ|Прилѣпѣ]], [[Македонї|Македонїи]] бѣ. Своѥ пѣвьчьство лѣта 1997 почѧ, о тѣхъ поръ 13 дїскы съ моусїкоѭ издалъ бѣ. Избьранъ лѣта 2004 добры волѩ посълъ [[Ѥдинѥнъ народъ съвѣта дѣтьска чѧсть|ѤНСД҃Ч]] бѣ и того дѣл напьса ѥѩ епїсимьнѫѭ пѣснь ({{lang-mk|За овој свет}} («За сь свѣтъ»), {{lang-en|This World}} («Сь свѣтъ»)). Посъланъ о Македонїѩ тогожде лѣта на Еѵрѡпьско пѣвьчьско рьвьниѥ [[Еѵрѡвидениѥ]] бѣ. Погынѫлъ напрасно [[Хръватьска|Хръватьсцѣ]] зълѣ аѵтокїнитьсцѣ приключаи ѥстъ.
 
 [[image:Tose_Proeski.jpg|right|thumb|Тошѧ Проѥвьскыи]]
 
