robot  Adding: [[bn:রাশিয়ার প্রথম পিটার]] Modifying: [[id:Peter I]]

--- a/Пєтръ_Вєликꙑи.mw
+++ b/Пєтръ_Вєликꙑи.mw
@@ -7,6 +7,7 @@
 [[ast:Pedro I de Rusia]]
 [[be:Пётр I, імператар расійскі]]
 [[bg:Петър I (Русия)]]
+[[bn:রাশিয়ার প্রথম পিটার]]
 [[bs:Petar I Veliki]]
 [[ca:Pere I de Rússia]]
 [[cs:Petr Veliký]]
@@ -29,7 +30,7 @@
 [[hi:पीटर महान]]
 [[hr:Petar I. Aleksejevič Romanov]]
 [[hu:I. Péter orosz cár]]
-[[id:Peter I dari Rusia]]
+[[id:Peter I]]
 [[io:Peter 1ma]]
 [[is:Pétur mikli]]
 [[it:Pietro I di Russia]]
