Паче Шѹпашкаръ нѣстъ Рѡсїѩ стольныи градъ. Своѥ речениѥ исправихъ.

--- a/Шоупашкаръ.mw
+++ b/Шоупашкаръ.mw
@@ -6,7 +6,7 @@
 | Основанъ = лѣта 1469 
 | Харта =
 |}}
-'''Шѹпашка́ръ''' ({{lang-cv|Шупашкар}}, {{lang-ru|Чебоксары}}) [[Рѡсї|Рѡсїѩ]], [[Чьвашьска Димократїıа|Чьвашьскы Димократїѩ]] стольнъ градъ ѥстъ. Построѥнъ Вълѕѣ рѣцѣ ѥстъ, людии обитаѥтъ 442,6 тысѧщь. Основанъ лѣта 1469 ѥстъ.
+'''Шѹпашка́ръ''' ({{lang-cv|Шупашкар}}, {{lang-ru|Чебоксары}}) [[Рѡсї|Рѡсїѩ]] градъ, [[Чьвашьска Димократїıа|Чьвашьскы Димократїѩ]] стольнъ градъ ѥстъ. Построѥнъ Вълѕѣ рѣцѣ ѥстъ, людии обитаѥтъ 442,6 тысѧщь. Основанъ лѣта 1469 ѥстъ.
 
 {{commonscat|Cheboksary}}
 [[Катигорї:Гради]]
