*Empty MediaWiki Message*

--- a/Напьсаниѥ_Самоуилоу.mw
+++ b/Напьсаниѥ_Самоуилоу.mw
@@ -10,5 +10,8 @@
 
 [[Category:Словѣньскъ ѩзыкъ]]
 
+[[bg:Самуилов надпис]]
+[[en:Samuil's Inscription]]
 [[es:Inscripción de Samuel]]
 [[ru:Надпись Самуила]]
+[[sr:Самуилов натпис]]
