*Empty MediaWiki Message*

--- a/Тошѧ_Проѥвьскꙑи.mw
+++ b/Тошѧ_Проѥвьскꙑи.mw
@@ -1,4 +1,4 @@
-'''Тошѧ Проѥвьскыи''' ({{lang-mk|Тоше Проески}}, исто имѧ '''Ѳеодѡръ Проѥвьскыи''', {{lang-mk|Тодор Проески}} ѥстъ. нѹарї 25 дьне 1981 — октѡврї 16 дьне 2007) великъ македоньскъ пѣвьць бѣаше. Мъноѕи мыслѧтъ ко наибол҄ии [[Югослави|югословѣньскъ]] пѣвьць бѣ. Рожденъ [[Прилѣпъ|Прилѣпѣ]], [[Македонї|Македонїи]] бѣ. Своѥ пѣвьчьство лѣта 1997 почѧ, о тѣхъ поръ 13 дїскы съ моусїкоѭ издалъ бѣ. Избьранъ лѣта 2004 добры волѩ посълъ [[Ѥдинѥнъ народъ съвѣта дѣтьска чѧсть|ѤНСД҃Ч]] бѣ и того дѣл напьса ѥи епїсимьнѫѭ пѣснь ({{lang-mk|За овој свет}} («За сь свѣтъ»), {{lang-en|This World}} («Сь свѣтъ»)). Посъланъ о Македонїѩ тогожде лѣта на Еѵрѡпьско пѣвьчьско рьвьниѥ [[Еѵрѡвидениѥ]] бѣ. Погынѫлъ напрасно [[Хръватьска|Хръватьсцѣ]] зълѣ аѵтокїнитьнѣ приключаи ѥстъ.
+'''Тошѧ Проѥвьскъ''' ({{lang-mk|Тоше Проески}}, исто имѧ '''Ѳеодѡръ Проѥвьскъ''', {{lang-mk|Тодор Проески}} ѥстъ. нѹарї 25 дьне 1981 — октѡврї 16 дьне 2007) великъ македоньскъ пѣвьць бѣаше. Мъноѕи мыслѧтъ ко наибол҄ии [[Югослави|югословѣньскъ]] пѣвьць бѣ. Рожденъ [[Прилѣпъ|Прилѣпѣ]], [[Македонї|Македонїи]] бѣ. Своѥ пѣвьчьство лѣта 1997 почѧ, о тѣхъ поръ 13 дїскы съ моусїкоѭ издалъ бѣ. Избьранъ лѣта 2004 добры волѩ посълъ [[Ѥдинѥнъ народъ съвѣта дѣтьска чѧсть|ѤНСД҃Ч]] бѣ и того дѣл напьса ѥи епїсимьнѫѭ пѣснь ({{lang-mk|За овој свет}} («За сь свѣтъ»), {{lang-en|This World}} («Сь свѣтъ»)). Посъланъ о Македонїѩ тогожде лѣта на Еѵрѡпьско пѣвьчьско рьвьниѥ [[Еѵрѡвидениѥ]] бѣ. Погынѫлъ напрасно [[Хръватьска|Хръватьсцѣ]] зълѣ аѵтокїнитьнѣ приключаи ѥстъ.
 
 [[image:Tose_Proeski.jpg|right|thumb|Тошѧ Проѥвьскыи]]
 
