--- a/Чьвашьскъ_ѩꙁꙑкъ.mw
+++ b/Чьвашьскъ_ѩꙁꙑкъ.mw
@@ -1,9 +1,6 @@
-(to be corrected)
+''' Чьвашьскъ ѩзыкъ''', такожде ѩакоже  [[Рѹсьскъ_ѩзыкъ|рѹсьскъ]],  Чьвашїѩ дрьжавьнъ ѩзыкъ ѥстъ. Чьвашьскъ ѩзыкъ сѧ търкьскы сѣмиѩ  козарьсци  и древл҄ьнѥблъгарьсци вѣтви ѩзыкъ влѥтъ и единъ живый ѩзыкъ сеѧ  вѣтви ѥстъ. Глаголѭщь людии же с҄имь ѩзыкомь до 1,3 леѡдръ сѫтъ. 
 
-
-''' Чоувашъскъ ѩзыкъ ''', такожде ѩакоже  [[Рѹсьскъ_ѩзыкъ|рѹсьскъ]],  Чоувашїѩ дрьжавьнъ ѩзыкъ ѥстъ. Чоувашъскъ ѩзыкъ сѧ търкьскы сѣмиѩ  козарьсци  и древл҄ьнѥблъгарьсци вѣтви ѩзыкъ влѥтъ и единъ живый ѩзыкъ сеѧ  вѣтви ѥстъ. Глаголѭщь людии же с҄имь ѩзыкомь до 1,3 леѡдръ сѫтъ. 
-
-== Чоувашъска [[азъбѹкы]]==
+== Чьвашьска [[азъбѹкы]]==
 
 {| style="font-family:Arial Unicode MS; font-size:1.4em; border-color:#000000; border-width:1px; border-style:solid; border-collapse:collapse; background-color:#F8F8EF"
 | style="width:3em; text-align:center; padding: 3px;" | А а
@@ -48,8 +45,5 @@
 | style="width:3em; text-align:center; padding: 3px;" | Ю ю
 | style="width:3em; text-align:center; padding: 3px;" | Я я
 |}
-
-
-
 
 [[Катигорї:Ѩзыци]]
