--- a/Чьвашьскъ_ѩꙁꙑкъ.mw
+++ b/Чьвашьскъ_ѩꙁꙑкъ.mw
@@ -1,4 +1,4 @@
-''' Чьвашьскъ ѩзыкъ''', такожде ѩакоже  [[Рѹсьскъ_ѩзыкъ|рѹсьскъ]],  Чьвашїѩ дрьжавьнъ ѩзыкъ ѥстъ. Чьвашьскъ ѩзыкъ сѧ търкьскы сѣмиѩ  козарьсци  и древл҄ьнѥблъгарьсци вѣтви ѩзыкъ влѥтъ и единъ живый ѩзыкъ сеѧ  вѣтви ѥстъ. Глаголѭщь людии же с҄имь ѩзыкомь до 1,3 леѡдръ сѫтъ. 
+''' Чьвашьскъ ѩзыкъ''' (съ [[Рѹсьскъ_ѩзыкъ|рѹсьскыимь]]) [[Чьвашьска Димократї|Чьвашьскы Димократїѩ]] дрьжавьнъ ѩзыкъ ѥстъ. Чьвашьскъ сѧ тѷрчьскы сѣмиѩ  древл҄ьнѥблъгарьско-козарьскы вѣтви ѩзыкъ влѥтъ, ѥѩже ѥдинъ живъ ѩзыкъ ѥстъ. Глаголѭщь людии с҄имь ѩзыкомь до 1,3 леѡдръ ѥстъ. 
 
 == Чьвашьска [[азъбѹкы]]==
 
