--- a/Тєѯасъ.mw
+++ b/Тєѯасъ.mw
@@ -1,4 +1,4 @@
 [[Видъ:Flag of Texas.svg|right|thumb|250px|Теѯаса знамѧ]]
-'''Теѯасъ''' ([[Англїискъ ѩзыкъ|англїискы]] ''Texas'') дрьжава [[АѤД|АѤД ]] ъ, стольнъ градъ ѥѩ [[Остинъ]] ѥстъ. Людии обитаѥтъ Теѯасѣ 23 леѡдръ.
+'''Теѯасъ''' ([[Англїискъ ѩзыкъ|англїискы]] ''Texas'') дрьжава [[АѤД|АѤД ]] , стольнъ градъ ѥѩ [[Остинъ]] ѥстъ. Людии обитаѥтъ Теѯасѣ 23 леѡдръ.
 
-[[АѤД|АѤДъ]]
+[[Category:АѤД]]
