--- a/Ондоурасъ.mw
+++ b/Ондоурасъ.mw
@@ -11,6 +11,94 @@
 }}
 '''Ондѹрасъ''' ([[Їспаньскъ ѩзык|їспаньскы]]: ''Honduras'') [[Срѣдьн Амерїка|Срѣдьнѩ Амерїци]] дрьжава ѥстъ. Стольнъ градъ [[Тегѹсигал҄ьпа]] ѥстъ. Дрьжавьнъ ѩзыкъ [[Їспаньскъ ѩзык|їспаньскъ]] ѥстъ. Людии обитаѥтъ 6,9 леѡдръ.
 
+{{commonscat|Honduras}}
 [[Category:Страны]]
 
 [[ru:Гондурас]]
+[[an:Onduras]]
+[[ar:هندوراس]]
+[[ast:Hondures]]
+[[az:Honduras]]
+[[bat-smg:Huondūrs]]
+[[be-x-old:Гандурас]]
+[[bg:Хондурас]]
+[[bo:ཧོང་དུ་ར་སི]]
+[[bpy:হন্ডুরাস]]
+[[br:Honduras]]
+[[bs:Honduras]]
+[[ca:Hondures]]
+[[cs:Honduras]]
+[[cy:Honduras]]
+[[da:Honduras]]
+[[de:Honduras]]
+[[diq:Honduras]]
+[[el:Ονδούρα]]
+[[en:Honduras]]
+[[eo:Honduro]]
+[[es:Honduras]]
+[[et:Honduras]]
+[[eu:Honduras]]
+[[fa:هندوراس]]
+[[fi:Honduras]]
+[[fr:Honduras]]
+[[frp:Honduras]]
+[[ga:Hondúras]]
+[[gl:Honduras]]
+[[he:הונדורס]]
+[[hi:हॉण्डुरास]]
+[[hr:Honduras]]
+[[ht:Ondiras]]
+[[hu:Honduras]]
+[[ia:Honduras]]
+[[id:Honduras]]
+[[ilo:Honduras]]
+[[io:Honduras]]
+[[is:Hondúras]]
+[[it:Honduras]]
+[[ja:ホンジュラス]]
+[[ka:ჰონდურასი]]
+[[kk:Ондурас]]
+[[ko:온두라스]]
+[[ku:Hondûras]]
+[[kw:Hondouras]]
+[[la:Honduria]]
+[[lij:Honduras]]
+[[ln:Honduras]]
+[[lt:Hondūras]]
+[[lv:Hondurasa]]
+[[mk:Хондурас]]
+[[ms:Honduras]]
+[[na:Honduras]]
+[[nds:Honduras]]
+[[nl:Honduras]]
+[[nn:Honduras]]
+[[no:Honduras]]
+[[nov:Honduras]]
+[[oc:Honduras]]
+[[pam:Honduras]]
+[[pl:Honduras]]
+[[pms:Honduras]]
+[[ps:هندوراس]]
+[[pt:Honduras]]
+[[qu:Unduras]]
+[[ro:Honduras]]
+[[sa:हांडूरस]]
+[[scn:Honduras]]
+[[sh:Honduras]]
+[[simple:Honduras]]
+[[sk:Honduras]]
+[[sl:Honduras]]
+[[sq:Hondurasi]]
+[[sr:Хондурас]]
+[[sv:Honduras]]
+[[sw:Honduras]]
+[[tg:Ҳондурас]]
+[[th:ประเทศฮอนดูรัส]]
+[[tl:Honduras]]
+[[tr:Honduras]]
+[[uk:Гондурас]]
+[[uz:Gonduras]]
+[[vi:Honduras]]
+[[vo:Hondurän]]
+[[zh:洪都拉斯]]
+[[zh-min-nan:Honduras]]
