/* Гради македоньсци */ Пехъчево исправихъ

--- a/Сѣвєрьна_Макєдонїꙗ.mw
+++ b/Сѣвєрьна_Макєдонїꙗ.mw
@@ -39,7 +39,7 @@
 | width="20px" |
 | valign="top" |
 * [[Берово]]
-* [[Пехьчево]]
+* [[Пехъчево]]
 * [[Дельчево]]
 * [[Богоданьци]]
 * [[Свети Николе]]
