*Empty MediaWiki Message*

--- a/Тихвинъ.mw
+++ b/Тихвинъ.mw
@@ -1,1 +1,1 @@
-'''Тїхъвїнъ''' ([[Рѹсьскъ ѩзыкъ|рѹсьскы]] ''Тихвин'') градъ [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] ѥстъ. Основанъ ѥстъ лѣта 1383, градъ нареченъ съ лѣта 1773 ѥстъ. Построѥнъ ѥстъ рѣцѣ [[Тїхъвїнъка]]. Въ Тїхъвїнѣ рожденъ бѣахъ рѹськы синѳтїсъ [[Римъскїи-Корсаковъ,Нїколаи|Нїколаи Римъскїи-Корсаковъ]].
+'''Тїхъвїнъ''' ([[Рѹсьскъ ѩзыкъ|рѹсьскы]] ''Тихвин'') градъ [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] ѥстъ. Основанъ ѥстъ лѣта 1383, градъ нареченъ съ лѣта 1773 ѥстъ. Построѥнъ ѥстъ рѣцѣ [[Тїхъвїнъка]]. Въ Тїхъвїнѣ рожденъ бѣахъ рѹськы синѳетїсъ [[Римъскїи-Корсаковъ,Нїколаи|Нїколаи Римъскїи-Корсаковъ]].
