--- a/Тихвинъ.mw
+++ b/Тихвинъ.mw
@@ -1,1 +1,13 @@
-'''Тїхъвїнъ''' ([[Рѹсьскъ ѩзыкъ|рѹсьскы]] ''Тихвин'') градъ [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] ѥстъ. Основанъ ѥстъ лѣта 1383, градъ нареченъ съ лѣта 1773 ѥстъ. Построѥнъ ѥстъ рѣцѣ [[Тїхъвїнъка]]. Въ Тїхъвїнѣ рожденъ бѣахъ рѹськы синѳетїсъ [[Римъскїи-Корсаковъ,Нїколаи|Нїколаи Римъскїи-Корсаковъ]].
+{{Градъ|Имѧ = Тїхъвїнъ
+| знамѧ= Flag of Tikhvin (Leningrad oblast).png
+| знакъ = Coat of Arms of Tikhvin (Leningrad oblast) (1773).png
+| Дрьжава = {{Рѡсїѩ знамѧ}}[[Рѡсї]]
+| Глава = 
+| Людии = 61,7 тысѫщь
+| Основанъ = 1383
+| map = 
+|}}
+'''Тїхъвїнъ''' ({{lang-ru|Тихвин}}) градъ [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] ѥстъ. Людии обитаѥтъ 61,700. Основанъ ѥстъ лѣта 1383, градъ нареченъ съ лѣта 1773 ѥстъ. Построѥнъ ѥстъ рѣцѣ [[Тїхъвїнъка]]. Въ Тїхъвїнѣ рожденъ бѣахъ рѹськы синѳетїсъ [[Римъскїи-Корсаковъ,Нїколаи|Нїколаи Римъскїи-Корсаковъ]].
+{{Commonscat|Tikhvin}}
+[[Category:Гради]]
+[[ru:Тихвин]]
