robot  Adding: [[bn:তারা]], [[tg:Ситора]]

--- a/Ꙃвѣꙁда.mw
+++ b/Ꙃвѣꙁда.mw
@@ -11,6 +11,7 @@
 [[bat-smg:Žvaiždie]]
 [[be-x-old:Зорка]]
 [[bg:Звезда]]
+[[bn:তারা]]
 [[bpy:এসট্রেলা]]
 [[bs:Zvijezda]]
 [[ca:Estrella]]
@@ -81,6 +82,7 @@
 [[sv:Stjärna]]
 [[sw:Nyota]]
 [[ta:விண்மீன்]]
+[[tg:Ситора]]
 [[th:ดาวฤกษ์]]
 [[tl:Bituin]]
 [[tr:Yıldız]]
