*Empty MediaWiki Message*

--- a/Съкопиѥ.mw
+++ b/Съкопиѥ.mw
@@ -1,16 +1,18 @@
 {{Градъ|Имѧ = Съкопиѥ
 | знамѧ= ZNAME Skopje.jpg
-| знакъ = 
+| знакъ = Coat of arms of Skopje.png
 | Дрьжава = Македонї
 | Глава = 
 | Людии = 1110 тысѧщь
 | Основанъ = 1005
-| Харта = 
+| Харта = [[Видъ:MKD muni nonn(Skopje).png|200px]]
 }}
-'''Съкопиѥ''' ([[македоньскъ ѩзыкъ|македоньскы]] ''Скопје'') градъ рѣцѣ съ именьмъ [[Вардаръ]] ѥстъ, [[Македонї|Македонїѩ]] стольнъ градъ ѥстъ.
+'''Съкопиѥ''' ([[македоньскъ ѩзыкъ|македоньскы]] ''Скопје'') градъ рѣцѣ съ именьмъ [[Вардаръ]] ѥстъ, [[Македонї|Македонїѩ]] стольнъ градъ ѥстъ. Людии обитаѥтъ 1,1 леѡдръ. Основанъ лѣта 1005 ѥстъ
 
+{{Commonscat|Skopje}}
 [[Category:Гради]]
 [[Category:Стольни гради]]
+[[Category:Македонї]]
 
 [[am:ስኮፕዬ]]
 [[an:Skopje]]
