*Empty MediaWiki Message*

--- a/Съкопиѥ.mw
+++ b/Съкопиѥ.mw
@@ -1,5 +1,5 @@
 {{Градъ|Имѧ = Съкопиѥ
-| знамѧ= ZNAME Skopje.jpg
+| знамѧ= Flag of Skopje.png
 | знакъ = Coat of arms of Skopje.png
 | Дрьжава = Македонї
 | Глава = 
