*Empty MediaWiki Message*

--- a/Римъ.mw
+++ b/Римъ.mw
@@ -1,14 +1,15 @@
 {{Градъ|Имѧ = Римъ
 | знамѧ= Flag of Rome.svg
 | знакъ = Roma-Stemma.png
-| Дрьжава = Италї
+| Дрьжава = {{Италїѩ знамѧ}}Италї
 | Глава = 
-| Людии =  
+| Людии =  2,705,603
 | Основанъ = 
-| Харта =
+| Харта =[[Видъ:Italyrome.png|200px]]
 |}}
-'''Римъ''' ({{lang-la|Roma}}) ѥстъ великъ градъ южьштѣи [[Еѵрѡпа|Еѵрѡпѣ]], стольнъ градъ [[Италї|Италїѩ]].
+'''Римъ''' ({{lang-la|Roma}}) ѥстъ великъ градъ Южьны [[Еѵрѡпа|Еѵрѡпѣ]], стольнъ градъ [[Италї|Италїѩ]]. Людии обитаѥтъ 2,7 леѡдръ
 
+{{Commonscat|Rome}}
 [[Category:Гради]]
 [[Катигорї:Стольни гради]]
 [[Category:Италї]]
