--- a/Съкопиѥ.mw
+++ b/Съкопиѥ.mw
@@ -3,11 +3,11 @@
 | знакъ = Coat of arms of Skopje.png
 | Дрьжава = Македонї
 | Глава = 
-| Людии = 1110 тысѧщь
+| Людии = 521 569  
 | Основанъ = 1005
 | Харта = [[Видъ:MKD muni nonn(Skopje).png|200px]]
 }}
-'''Съкопиѥ''' ([[македоньскъ ѩзыкъ|македоньскы]] ''Скопје'') градъ рѣцѣ съ именьмъ [[Вардаръ]] ѥстъ, [[Македонї|Македонїѩ]] стольнъ градъ ѥстъ. Людии обитаѥтъ 1,1 леѡдръ. Основанъ лѣта 1005 ѥстъ
+'''Съкопиѥ''' ([[македоньскъ ѩзыкъ|македоньскы]] ''Скопје'') градъ рѣцѣ съ именьмъ [[Вардаръ]] ѥстъ, [[Македонї|Македонїѩ]] стольнъ градъ ѥстъ. Людии обитаѥтъ 521 тысѧщѧ. Основанъ лѣта 1005 ѥстъ
 
 {{Commonscat|Skopje}}
 [[Category:Гради]]
