исправление даты основания

--- a/Съкопиѥ.mw
+++ b/Съкопиѥ.mw
@@ -4,10 +4,10 @@
 | Дрьжава = Македонї
 | Глава = 
 | Людии = 521 569  
-| Основанъ = 1005
+| Основанъ = лѣта 3500 до х҃р
 | Харта = [[Видъ:MKD muni nonn(Skopje).png|200px]]
 }}
-'''Съкопиѥ''' ([[македоньскъ ѩзыкъ|македоньскы]] ''Скопје'') градъ рѣцѣ съ именьмъ [[Вардаръ]] ѥстъ, [[Македонї|Македонїѩ]] стольнъ градъ ѥстъ. Людии обитаѥтъ 521 тысѧщѧ. Основанъ лѣта 1005 ѥстъ
+'''Съкопиѥ''' ([[македоньскъ ѩзыкъ|македоньскы]] ''Скопје'') градъ рѣцѣ съ именьмъ [[Вардаръ]] ѥстъ, [[Македонї|Македонїѩ]] стольнъ градъ ѥстъ. Людии обитаѥтъ 521 тысѧщѧ. Основанъ лѣта 3500 до х҃р ѥстъ
 
 {{Commonscat|Skopje}}
 [[Category:Гради]]
