--- a/Шоупашкаръ.mw
+++ b/Шоупашкаръ.mw
@@ -1,7 +1,7 @@
 {{Градъ|Имѧ = Шѹпашкаръ
 | знакъ = Coat_of_Arms_of_Cheboksary_%28Chuvashia%29.png
 | Дрьжава = {{Рѡсїѩ знамѧ}}  Рѡсї
-| Глава =  Ѥмельновъ Нїколай Ивановичь
+| Глава =  Ѥмельновъ Нїколаи Ивановичь
 | Людии =  442,6 тысѫщь
 | Основанъ = лѣта 1469 
 | Харта =
