--- a/Римъ.mw
+++ b/Римъ.mw
@@ -7,7 +7,7 @@
 | Основанъ = 
 | Харта =[[Видъ:Italyrome.png|200px]]
 |}}
-'''Римъ''' ({{lang-la|Roma}}) ѥстъ великъ градъ Южьны [[Еѵрѡпа|Еѵрѡпѣ]], стольнъ градъ [[Италї|Италїѩ]]. Людии обитаѥтъ Римѣ 2,7 леѡдръ.
+'''Римъ''' ({{lang-la|Rōma}}, {{lang-it|Roma}}) южьны [[Еѵрѡпа|Еѵрѡпы]] великъ градъ и [[Италї|Италїѩ]] стольнъ градъ ѥстъ. Людии обитаѥтъ Римѣ 2,7 леѡдръ.
 
 {{Commonscat|Rome}}
 [[Category:Гради]]
