--- a/Тихвинъ.mw
+++ b/Тихвинъ.mw
@@ -1,4 +1,4 @@
-{{Градъ|Имѧ = Тїхъвїнъ
+{{Градъ|Имѧ = Тихвинъ
 | знамѧ= Flag of Tikhvin (Leningrad oblast).png
 | знакъ = Coat of Arms of Tikhvin (Leningrad oblast) (1773).png
 | Дрьжава = {{Рѡсїѩ знамѧ}}[[Рѡсї]]
@@ -7,7 +7,7 @@
 | Основанъ = 1383
 | map = 
 |}}
-'''Тїхъвїнъ''' ({{lang-ru|Тихвин}}) градъ [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] ѥстъ. Людии обитаѥтъ 61,700. Основанъ ѥстъ лѣта 1383, градъ нареченъ съ лѣта 1773 ѥстъ. Построѥнъ ѥстъ рѣцѣ [[Тїхъвїнъка|Тїхъвїнъцѣ]]. Въ Тїхъвїнѣ рожденъ бѣахъ рѹськы синѳетїсъ [[Римъскїи-Корсаковъ, Нїколаи|Нїколаи Римъскїи-Корсаковъ]].
+'''Тихвинъ''' ({{lang-ru|Тихвин}}, [[вепсьскъ ѩзыкъ|вепсьскаѥго]] ѩзыка съложьно слово ис ''тих'' «пѫть» и ''вин'' «тръгъ») [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] градъ ѥстъ. Людии обитаѥтъ 61,700. Основанъ лѣта 1383 и градъ нареченъ съ лѣта 1773 ѥстъ. Построѥнъ ѥстъ рѣцѣ [[Тихвинъка|Тихвинъцѣ]]. Тихвинѣ рожденъ [[Нїколаи Римьскыи-Корсаковъ Нїколаи]] рѹсьскъ сѷнѳета бѣ.
 {{Commonscat|Tikhvin}}
 [[Category:Гради]]
 [[ru:Тихвин]]
