*Empty MediaWiki Message*

--- a/Римъ.mw
+++ b/Римъ.mw
@@ -4,10 +4,10 @@
 | Дрьжава = {{Италїѩ знамѧ}}Италї
 | Глава = 
 | Людии =  2,705,603
-| Основанъ = 
+| Основанъ = лѣта 753 до х҃р
 | Харта =[[Видъ:Italyrome.png|200px]]
 |}}
-'''Римъ''' ({{lang-la|Rōma}}, {{lang-it|Roma}}) южьны [[Еѵрѡпа|Еѵрѡпы]] великъ градъ и [[Италї|Италїѩ]] стольнъ градъ ѥстъ. Людии обитаѥтъ Римѣ 2,7 леѡдръ.
+'''Римъ''' ({{lang-la|Rōma}}, {{lang-it|Roma}}) южьны [[Еѵрѡпа|Еѵрѡпы]] великъ градъ и [[Италї|Италїѩ]] стольнъ градъ ѥстъ. Людии обитаѥтъ Римѣ 2,7 леѡдръ. Основанъ лѣта 753 до х҃р ѥстъ.
 
 {{Commonscat|Rome}}
 [[Category:Гради]]
