*Empty MediaWiki Message*

--- a/Їталїꙗ.mw
+++ b/Їталїꙗ.mw
@@ -6,11 +6,12 @@
 | Ѩзыкъ = [[Италїискъ ѩзыкъ|италїискъ]]
 | Глава = 
 | area =
-| Людии =  
+| Людии =  58 883 958
 | Почѧта = 
 }}
-'''Италї''' ([[Италїискъ ѩзыкъ|италїискы]] ''Italia'') южьны [[Еѵрѡпа|Еѵрѡпы]] дрьжава ѥстъ. Италиѩ стольнъ град [[Римъ]] ѥстъ.
+'''Италї''' ({{lang-it|Italia}}) южьны [[Еѵрѡпа|Еѵрѡпы]] дрьжава ѥстъ. Италиѩ стольнъ град [[Римъ]] ѥстъ. Италїи людии 58,8 леѡдръ обитаѥтъ.
 
+{{commonscat|Italia}}
 [[Category:Италї|Италї]]
 
 [[af:Italië]]
