--- a/Ондоурасъ.mw
+++ b/Ондоурасъ.mw
@@ -9,7 +9,7 @@
 | Людии = 6,9 леѡдръ
 | Почѧта = 1823
 }}
-'''Ондѹрасъ''' ([[Їспаньскъ ѩзык|їспаньскы]]: ''Honduras'') [[Срѣдьн Амерїка|Срѣдьнѩ Амерїци]] дрьжава ѥстъ. Стольнъ градъ [[Тегѹсигал҄ьпа]] ѥстъ. Дрьжавьнъ ѩзыкъ [[Їспаньскъ ѩзык|їспаньскъ]] ѥстъ. Людии обитаѥтъ 6,9 леѡдръ.
+'''Ондѹрасъ''' ({{Lang-es|Honduras}}) [[Срѣдьн Амерїка|Срѣдьнѩ Амерїци]] дрьжава ѥстъ. Стольнъ градъ [[Тегѹсигал҄ьпа]] ѥстъ. Дрьжавьнъ ѩзыкъ [[Їспаньскъ ѩзык|їспаньскъ]] ѥстъ. Людии обитаѥтъ 6,9 леѡдръ.
 
 {{commonscat|Honduras}}
 [[Category:Страны]]
