--- a/Їспанїꙗ.mw
+++ b/Їспанїꙗ.mw
@@ -9,8 +9,8 @@
 | Людии =  41 леѡдръ
 | Почѧта = 
 }}
-'''Їспанї''' ([[Їспаньскъ ѩзык|їспаньскы]] ''España'') [[Южьна Еѵрѡпа|Южьны Еѵрѡпы]] дрьжава ѥстъ, стольнъ градъ [[Мадрїдъ]] ѥстъ. Їспанї сътворѥна лѣта 1492 ѥстъ. Людии обитаѥтъ 41 леѡдръ. Бол҄ьша града [[Мадрїдъ]] и [[Барселона]] ѥсте, дрьжавьнъ [[їспаньскъ ѩзыкъ]] ѥстъ.
-
+'''Їспанї''' ({{Lang-es|España}}) [[Южьна Еѵрѡпа|Южьны Еѵрѡпы]] дрьжава ѥстъ, стольнъ градъ [[Мадрїдъ]] ѥстъ. Їспанї сътворѥна лѣта 1492 ѥстъ. Людии обитаѥтъ 41 леѡдръ. Бол҄ьша града [[Мадрїдъ]] и [[Барселона]] ѥсте, дрьжавьнъ [[їспаньскъ ѩзыкъ]] ѥстъ.
+{{Commonscat|Spain}}
 [[Катигорї:Еѵрѡпа]]
 [[Катигорї:Їспанї]]
 [[Катигорї:Страны]]
