--- a/Ондоурасъ.mw
+++ b/Ондоурасъ.mw
@@ -11,6 +11,114 @@
 }}
 '''Ондѹрасъ''' ({{Lang-es|Honduras}}) [[Срѣдьн Амерїка|Срѣдьнѩ Амерїци]] дрьжава ѥстъ. Стольнъ градъ [[Тегѹсигал҄ьпа]] ѥстъ. Дрьжавьнъ ѩзыкъ [[Їспаньскъ ѩзык|їспаньскъ]] ѥстъ. Людии обитаѥтъ 6,9 леѡдръ.
 
+== Ондѹраса чѧсти ==
+Ондѹраса чѧсти департаменти нарицаютъ.
+{| align="center" class="standard"
+|+
+! |Департаментъ
+! |Главьнъ градъ
+! |Площѧдь
+! |Людии обитаѥтъ (2001)
+|-----
+| Атлантїда
+| [[Ла-Сейба]]
+| 4 251
+| 315 041
+|-----
+| Валле
+| [[Накаоме]]
+| 1 565
+| 141 811
+|-----
+| Грасиасъ-а-Диосъ
+| [[Пѹерто-Лемпира]]
+| 16 630
+| 56 679
+|-----
+| Интибѹка
+| [[Ла-Есперанса]]
+| 3 072
+| 175 107
+|-----
+| Исласъ-де-ла-Баи
+| [[Роатанъ]]
+| 261
+| 31 552
+|-----
+| Иоро
+| Иоро
+| 7 939
+| 440 231
+|-----
+| Камаиагѹа
+| [[Камаиагѹа]]
+| 5 196
+| 332 314
+|-----
+| Колонъ
+| [[Трухильо]]
+| 8 875
+| 218 426
+|-----
+| Копанъ
+| [[Санта-Роса-де-Копанъ]]
+| 3 203
+| 276 083
+|-----
+| Кортесъ
+| [[Сан-Педро-Сѹла]]
+| 3 954
+| 1 077 538
+|-----
+| Ла-Пасъ
+| Ла-Пасъ
+| 2 331
+| 147 787
+|-----
+| Лемпира
+| [[Грасиасъ]]
+| 4 290
+| 243 971
+|-----
+| Окатепеке
+| [[Окатепеке]]
+| 1 680
+| 102 176
+|-----
+| Оланхо
+| [[Хѹтикал҄ьпа]]
+| 24 351
+| 384 881
+|-----
+| Санта-Барбара
+| [[Санта-Барбара]]
+| 5 115
+| 327 343
+|-----
+| Франсиско Морасанъ
+| [[Тегѹсигал҄ьпа]]
+| 6 298
+| 259 673
+|-----
+| Срѣдьнъ
+| [[Тегѹсигал҄ьпа]]
+| 1 648
+| 850 227
+|-----
+| Чолѹтека
+| [[Чолѹтека]]
+| 4 211
+| 364 684
+|-----
+| Ел҄ь-Параисо
+| [[Юскаранъ]]
+| 7 218
+| 331 351
+|+
+|}
+
+== Зьри такожде ==
+
 {{commonscat|Honduras}}
 [[Category:Страны]]
 
