*Empty MediaWiki Message*

--- a/Ондоурасъ.mw
+++ b/Ондоурасъ.mw
@@ -46,7 +46,7 @@
 | 31 552
 |-----
 | Иоро
-| Иоро
+| [[Иоро]]
 | 7 939
 | 440 231
 |-----
@@ -71,7 +71,7 @@
 | 1 077 538
 |-----
 | Ла-Пасъ
-| Ла-Пасъ
+| [[Ла-Пасъ]]
 | 2 331
 | 147 787
 |-----
