/* Еѵрѡпы бол҄ьшѧ дрьжавы */

--- a/Єѵрѡпа.mw
+++ b/Єѵрѡпа.mw
@@ -17,7 +17,7 @@
 * {{Свеньска знамѧ}}[[Свеньско]]
 * {{Нѣмьць знамѧ}}[[Нѣмьци]]
 * [[Сѹмь]]
-* [[Норегъ]]
+* {{Норега знамѧ}}[[Норегъ]]
 * {{Италїѩ знамѧ}}[[Италї]]
 * {{Великы Британїѩ знамѧ}}[[Велика Британї]]
 
