*Empty MediaWiki Message*

--- a/Ондоурасъ.mw
+++ b/Ондоурасъ.mw
@@ -1,4 +1,4 @@
-{{Дрьжава|name = Ондѹрасъ
+{{Дрьжава|name = Ондѹрасъ<br>Honduras
 | знамѧ= [[Видъ:Flag of Honduras.svg|150px]]
 | знакъ = [[Видъ:Honduras coa.png|100px]]
 | map = LocationHonduras.png
@@ -9,7 +9,7 @@
 | Людии = 6,9 леѡдръ
 | Почѧта = 1823
 }}
-'''Ондѹрасъ''' ({{Lang-es|Honduras}}) [[Срѣдьн Амерїка|Срѣдьнѩ Амерїци]] дрьжава ѥстъ. Стольнъ градъ [[Тегѹсигал҄ьпа]] ѥстъ. Дрьжавьнъ ѩзыкъ [[Їспаньскъ ѩзык|їспаньскъ]] ѥстъ. Людии обитаѥтъ 6,9 леѡдръ.
+'''Ондѹрасъ''' ({{Lang-es|Honduras}}), епїсимьно имѧ Димократї Ондѹрасъ ({{lang-es|República de Honduras}}), [[Срѣдьн Амерїка|Срѣдьнѩ Амерїци]] дрьжава ѥстъ. Стольнъ градъ [[Тегѹсигал҄ьпа]] ѥстъ. Дрьжавьнъ ѩзыкъ [[Їспаньскъ ѩзык|їспаньскъ]] ѥстъ. Людии обитаѥтъ 6,9 леѡдръ.
 
 == Ондѹраса чѧсти ==
 Ондѹраса чѧсти департаменти нарицаютъ.
